[gd_scene load_steps=2 format=3 uid="uid://bpuqu3kymqlwb"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/conditionals.gd" id="1_jnmdf"]

[node name="Conditionals" type="MarginContainer"]
script = ExtResource("1_jnmdf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddConditionButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
text = "add conditional"

[node name="OperandContainer" type="HBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OperandOptionButton" type="OptionButton" parent="VBoxContainer/Controls/OperandContainer"]
layout_mode = 2

[node name="OperandArg1" type="SpinBox" parent="VBoxContainer/Controls/OperandContainer"]
layout_mode = 2

[node name="OperandArg2" type="SpinBox" parent="VBoxContainer/Controls/OperandContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "behavior on true conditions"

[node name="BehaviorButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="FactsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Controls/AddConditionButton" to="." method="_on_add_condition_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/Controls/OperandContainer/OperandOptionButton" to="." method="_on_operand_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/BehaviorButton" to="." method="_on_behavior_button_item_selected"]
